--- a/demos/history/!_system/css/main.css
+++ b/demos/history/!_system/css/main.css
@@ -170,7 +170,7 @@ table.center {
 
 .right_panel a {
 	display: block;
-	background-image: url('../images/_tap.png');
+	background-image: url('../images/tap.png');
 	background-position: 0 0;
 	background-repeat: no-repeat;
 	margin: 5px 0;
